Auto git update December 2021 - tony

--- a/Orchestration/conf_etm_run.yml
+++ b/Orchestration/conf_etm_run.yml
@@ -1,9 +1,9 @@
 #products: ['etasw','srf','dd','netet', 'etasw5','etc','rain','snowmelt','snwpk','swe','swf','swi']
 
 #products: ['etasw', 'netet','etc']
-products: ['srf']
+products: ['netet']
 
-start_year: 2018
+start_year: 2001
 end_year: 2020
 
 start_day: 1
@@ -11,10 +11,10 @@ end_day: 366
 
 run_frequency: 'daily'
 
-unmosaicked_input: 'ws-out/CONUS/Run03_01_2022/conus_r37t0/'
-enduser_cog_output: 'ws-enduser/CONUS/r37.0_tile0/'
+unmosaicked_input: 'ws-out/CONUS/Run02_17_2022/r50t7/'
+enduser_cog_output: 'ws-enduser/CONUS/r50.0_tile7/'
 
-max_concurrent_containers: 41
+max_concurrent_containers: 16
 max_cpu_percent: 220
 min_memory_available: 10
 
