--- a/Orchestration/conf_etm_run.yml
+++ b/Orchestration/conf_etm_run.yml
@@ -1,9 +1,7 @@
-#products: ['etasw','srf','dd','netet', 'etasw5','etc','rain','snowmelt','snwpk','swe','swf','swi']
+products: ['dd','netet', 'etc']
 
-#products: ['etasw', 'netet','etc']
-products: ['netet']
 
-start_year: 2001
+start_year: 2000
 end_year: 2020
 
 start_day: 1
@@ -11,10 +9,10 @@ end_day: 366
 
 run_frequency: 'daily'
 
-unmosaicked_input: 'ws-out/CONUS/Run02_17_2022/r50t7/'
-enduser_cog_output: 'ws-enduser/CONUS/r50.0_tile7/'
+unmosaicked_input: 'ws-out/CONUS/Run03_11_2022/conus_r50t9/'
+enduser_cog_output: 'ws-enduser/CONUS/r50.0_tile9/'
 
-max_concurrent_containers: 16
+max_concurrent_containers: 41
 max_cpu_percent: 220
 min_memory_available: 10
 
