Auto git update December 2021 - tony

--- a/Orchestration/Makefile
+++ b/Orchestration/Makefile
@@ -5,3 +5,8 @@ cat:
 rn:
 	docker system prune
 	python3 etm-class-orchestration-V4.py
+
+
+mn:
+	docker system prune
+	python3 orchestrate-monthly-etm.py
