--- a/Orchestration/conf_etm_run.yml
+++ b/Orchestration/conf_etm_run.yml
@@ -7,12 +7,12 @@ end_year: 2020
 start_day: 1
 end_day: 366
 
-run_frequency: 'daily'
+run_frequency: 'yearly'
 
-unmosaicked_input: 'ws-out/CONUS/Run03_11_2022/conus_r50t9/'
-enduser_cog_output: 'ws-enduser/CONUS/r50.0_tile9/'
+unmosaicked_input: 'ws-out/CONUS/Run03_03_2022/conus_r37t1/'
+enduser_cog_output: 'ws-enduser/CONUS/r37.0_tile1/'
 
-max_concurrent_containers: 41
+max_concurrent_containers: 6
 max_cpu_percent: 220
 min_memory_available: 10
 
