Auto git update December 2021 - tony

--- a/tallgrass/conus_api_etm/Makefile
+++ b/tallgrass/conus_api_etm/Makefile
@@ -2,4 +2,4 @@ cat:
 	cat Makefile
 
 test:
-	python3 conus_api_etm.py  -y 2005 --in ws-enduser/CONUS/ --out ws-out/test/ netet
+	python3 conus_api_etm.py  -y 2010 --in /caldera/projects/usgs/water/impd/skagone --out /caldera/projects/usgs/water/impd/butzer netet
