Auto git update December 2021 - tony

--- a/tallgrass/conus_api_etm/Makefile
+++ b/tallgrass/conus_api_etm/Makefile
@@ -3,3 +3,7 @@ cat:
 
 test:
 	python3 conus_api_etm.py  -y 2010 --in /caldera/projects/usgs/water/impd/skagone --out /caldera/projects/usgs/water/impd/butzer netet
+
+
+steffi:
+	ls /caldera/projects/usgs/water/impd/skagone
